export const snapshot = {};

snapshot[`when running a deployment, given CI only cloned 1 commit on current branch, expect to receive all parsed commits for branch 1`] = `
[
  {
    abbreviatedSha: "abc123",
    author: {
      email: "test@example.com",
      name: "Test Author",
    },
    committer: {
      email: "test@example.com",
      name: "Test Committer",
    },
    date: "2021-01-01T00:00:00.000Z",
    filesChanged: [],
    isMergeCommit: false,
    isRevertCommit: false,
    message: "latest remote commit on main branch",
    messageLines: [
      "latest remote commit on main branch",
    ],
    parents: [],
    sha: "abc123",
    title: "latest remote commit on main branch",
  },
  {
    abbreviatedSha: "abc123",
    author: {
      email: "test@example.com",
      name: "Test Author",
    },
    committer: {
      email: "test@example.com",
      name: "Test Committer",
    },
    date: "2021-01-01T00:00:00.000Z",
    filesChanged: [],
    isMergeCommit: false,
    isRevertCommit: false,
    message: "latest local commit on main branch",
    messageLines: [
      "latest local commit on main branch",
    ],
    parents: [],
    sha: "abc123",
    title: "latest local commit on main branch",
  },
]
`;

snapshot[`when running in test mode in a stacked pull request, expect the step scripts receive the simulated merge commits 1`] = `
{
  "feature-1": [
    {
      abbreviatedSha: "abc123",
      author: {
        email: "test@example.com",
        name: "Test Author",
      },
      committer: {
        email: "test@example.com",
        name: "Test Committer",
      },
      date: "2021-01-01T00:00:00.000Z",
      filesChanged: [],
      isMergeCommit: false,
      isRevertCommit: false,
      message: "latest local commit on feature-1 branch",
      messageLines: [
        "latest local commit on feature-1 branch",
      ],
      parents: [],
      sha: "abc123",
      title: "latest local commit on feature-1 branch",
    },
    {
      abbreviatedSha: "abc123",
      author: {
        email: "test@example.com",
        name: "Test Author",
      },
      committer: {
        email: "test@example.com",
        name: "Test Committer",
      },
      date: "2021-01-01T00:00:00.000Z",
      filesChanged: [],
      isMergeCommit: false,
      isRevertCommit: false,
      message: "latest local commit on main branch",
      messageLines: [
        "latest local commit on main branch",
      ],
      parents: [],
      sha: "abc123",
      title: "latest local commit on main branch",
    },
  ],
  "feature-2": [
    {
      abbreviatedSha: "abc123",
      author: {
        email: "test@example.com",
        name: "Test Author",
      },
      committer: {
        email: "test@example.com",
        name: "Test Committer",
      },
      date: "2021-01-01T00:00:00.000Z",
      filesChanged: [],
      isMergeCommit: false,
      isRevertCommit: false,
      message: "latest local commit on feature-2 branch",
      messageLines: [
        "latest local commit on feature-2 branch",
      ],
      parents: [],
      sha: "abc123",
      title: "latest local commit on feature-2 branch",
    },
    {
      abbreviatedSha: "abc123",
      author: {
        email: "test@example.com",
        name: "Test Author",
      },
      committer: {
        email: "test@example.com",
        name: "Test Committer",
      },
      date: "2021-01-01T00:00:00.000Z",
      filesChanged: [],
      isMergeCommit: false,
      isRevertCommit: false,
      message: "latest local commit on feature-1 branch",
      messageLines: [
        "latest local commit on feature-1 branch",
      ],
      parents: [],
      sha: "abc123",
      title: "latest local commit on feature-1 branch",
    },
    {
      abbreviatedSha: "abc123",
      author: {
        email: "test@example.com",
        name: "Test Author",
      },
      committer: {
        email: "test@example.com",
        name: "Test Committer",
      },
      date: "2021-01-01T00:00:00.000Z",
      filesChanged: [],
      isMergeCommit: false,
      isRevertCommit: false,
      message: "latest local commit on main branch",
      messageLines: [
        "latest local commit on main branch",
      ],
      parents: [],
      sha: "abc123",
      title: "latest local commit on main branch",
    },
  ],
  main: [
    {
      abbreviatedSha: "c57ad98f",
      author: {
        email: "test@example.com",
        name: "Test User",
      },
      branch: "main",
      committer: {
        email: "test@example.com",
        name: "Test User",
      },
      date: "2025-09-21T11:50:37.569Z",
      filesChanged: [],
      isMergeCommit: true,
      isRevertCommit: false,
      message: "Merge pull request #123 from feature-1

",
      messageLines: [
        "Merge pull request #123 from feature-1",
        "",
        "",
      ],
      parents: [
        "abc123",
        "abc123",
      ],
      refs: [
        "main",
      ],
      sha: "e4dbe193cc95d800000000000000000000000000",
      title: "Merge pull request #123 from feature-1",
    },
    {
      abbreviatedSha: "abc123",
      author: {
        email: "test@example.com",
        name: "Test Author",
      },
      committer: {
        email: "test@example.com",
        name: "Test Committer",
      },
      date: "2021-01-01T00:00:00.000Z",
      filesChanged: [],
      isMergeCommit: false,
      isRevertCommit: false,
      message: "latest remote commit on main branch",
      messageLines: [
        "latest remote commit on main branch",
      ],
      parents: [],
      sha: "abc123",
      title: "latest remote commit on main branch",
    },
  ],
}
`;
